[metadata]
name = flask_autoinject
version = 1.0.0
author = Erin Turnbull
author_email = erin.a.turnbull@gmail.com
description = Flask support for dependency injection with autoinject
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbullerin/flask_autoinject
project_urls =
    Bug Tracker = https://github.com/turnbullerin/flask_autoinject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    autoinject
    flask

[options.packages.find]
where = src

[options.entry_points]
autoinject.registrars =
    flask_autoinject = flask_autoinject.contexts:register_flask_context